# django-todo-api

./: lint.sh  pyproject.toml  setup.cfg
member/: admin.py  models.py  serializers.py  views.py
member/migrations/: 0001_initial.py  0002_alter_projectrecord_project_detail.py
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_created_at.py
todo_api/: settings.py  urls.py
